PDFPlugin: PDF orientation isn't respected when printing or print-previewing https://bugs.webkit.org/show_bug.cgi?id=110925 <rdar://problem/13008621>

Reviewed by Alexey Proskuryakov.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::drawPDFPage): Teach drawPDFPage about PDFPage's rotation property, and use it
to swap the PDF's cropbox. Painting now matches PDFViewController's historical behavior.


Canonical link: https://commits.webkit.org/129410@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144333 268f45cc-cd09-0410-ab3c-d52691b4dbfc